# panelapp

./: .checkov.yaml  .codeclimate.yml  .flake8  .gitignore  .gitlab-ci.yml  .gitleaks-ignore.comments.md  .gitleaks-ignore.json  .gitmodules  .markdownlint.rb  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  VERSION  package-lock.json  package.json  playwright-bdd.config.ts  playwright-ct.config.ts  playwright.config.ts  pyproject.toml  setup.cfg  setup.py  tsconfig.json  webpack.common.js  webpack.dev.js  webservices.md
.github/workflows/: main.yml
.gitlab-ci/: envs.yml
.storybook/: main.ts  preview.ts
deploy/: fetch_genes.py  gunicorn_config.py
docker/: Dockerfile  docker-compose.yml
docker/cloud/: Dockerfile  Dockerfile-base  Dockerfile-web  Dockerfile-worker  Makefile  README.md  docker-compose.yml
docker/dev/: Dockerfile-web  Dockerfile-worker  Makefile  README.md  docker-compose.yml  s3-cors-config.json  schemaspy.properties
frontend/: panel_app.js  panel_app.scss  panel_app.ts
frontend/components/: ArrowDown.ts  ArrowRight.ts  Badge.ts  Brand.ts  Facet.ts  HomePages.ts  Navbar.ts  RatingBadge.ts
frontend/tests/: data.json  panels.spec.ts  visual.spec.ts
frontend/tests/pages/: panel.ts
panelapp/: manage.py  s3_storages.py  wsgi.py
panelapp/accounts/: admin.py  forms.py  models.py  tasks.py  urls.py  views.py
panelapp/accounts/migrations/: 0001_initial.py  0002_reviewers.py  0003_auto_20170522_1148.py  0005_auto_20170816_0954.py  0006_auto_20180612_0937.py  0007_auto_20180615_1147.py  0008_auto_20180628_1641.py  0008_auto_20180724_1325.py  0010_add_training_group.py
panelapp/accounts/tests/: factories.py  setup.py  test_accounts.py  test_permissions.py  test_reviewers.py
panelapp/accounts/views/: __init__.py  decorators.py
panelapp/api/: permissions.py  urls.py
panelapp/api/v1/: serializers.py  urls.py  viewsets.py
panelapp/panelapp/: __init__.py  admin.py  autocomplete.py  celery.py  components.py  content_security_policy.py  context_processors.py  logs.py  middleware.py  models.py  tasks.py  urls.py  views.py
panelapp/panelapp/cognito/: middleware.py
panelapp/panelapp/health/: enums.py  health_check_serializers.py  health_checks.py
panelapp/panelapp/migrations/: 0001_initial.py  0002_auto_20170518_1701.py  0004_auto_20170519_1044.py  0005_auto_20170620_1600.py  0006_file.py  0007_auto_20190905_1641.py
panelapp/panelapp/settings/: base.py  dev.py  docker-aws.py  docker-dev.py  on-prem.py  test.py
panelapp/panelapp/static/: comment_reports.css  literature-assignments.css  literature-assignments.js  panel_app.css
panelapp/panelapp/templates/: 403.html  404.html  500.html  banner.html  base.html  default.html  default_anonymous.html  error.html
panelapp/panelapp/templatetags/: banner.py
panelapp/panelapp/tests/: factories.py  test_content_security_policy.py  test_health_check_views.py  test_health_checks.py  test_standardise.py
panelapp/panelapp/utils/: home_page.py  storage.py
panelapp/panels/: activity_patterns.py  admin.py  ajax_views.py  enums.py  exceptions.py  markdown_renderer.py  mixins.py  tasks.py  urls.py  utils.py
panelapp/panels/forms/: __init__.py  activity.py  copygene.py  copyregion.py  copystr.py  geneready.py  genereview.py  helpers.py  mixins.py  panel.py  panelgene.py  promotepanel.py  region.py  region_ready.py  region_review.py  str.py  str_ready.py  strreview.py  uploads.py
panelapp/panels/migrations/: 0001_initial.py  0002_gene.py  0003_auto_20170526_1041.py  0005_auto_20170530_1414.py  0006_auto_20170531_1121.py  0007_auto_20170531_1122.py  0008_auto_20170606_1557.py  0009_auto_20170613_1138.py  0010_auto_20170613_1603.py  0011_auto_20170614_1207.py  0012_auto_20170614_1358.py  0013_auto_20170614_1400.py  0014_auto_20170615_0953.py  0015_auto_20170616_1109.py  0016_auto_20170620_1600.py  0017_auto_20170621_1239.py  0018_auto_20170621_1254.py  0019_auto_20170621_1302.py  0020_auto_20170621_1306.py  0021_auto_20170621_1320.py  0022_auto_20170621_1331.py  0023_auto_20170724_1400.py  0024_gene_active.py  0026_auto_20170822_1128_squashed_0033_auto_20170822_1422.py  0027_auto_20170823_1210.py  0028_auto_20170824_1549.py  0029_genepanel_deleted.py  0030_auto_20171106_1729.py  0031_auto_20171107_1003.py  0032_auto_20171130_1702.py  0032_genepanel_status.py  0034_auto_20171207_1139.py  0036_auto_20180213_1322.py  0037_auto_20180213_1323.py  0038_auto_20180220_1236.py  0039_auto_20180221_1347.py  0040_auto_20180221_1652.py  0041_auto_20180222_0948.py  0042_auto_20180326_1154.py  0043_evaluation_clinically_relevant.py  (+44 more)
panelapp/panels/models/: Level4Title.py  __init__.py  _uploaded_common.py  activity.py  comment.py  entity.py  evaluation.py  evidence.py  gene.py  genepanel.py  region.py  (+9 more)
panelapp/releases/: admin.py  domain_logic.py  forms.py  models.py  resources.py  tasks.py  urls.py  utils.py
panelapp/scripts/: add_random_data.py  datacleanup.py  ensembl_id_update.py  home_page.py  populate_missing_evaluation_dates.py
panelapp/v1rewrites/: urls.py  views.py
panelapp/webservices/: serializers.py  urls.py  views.py
playwright/: Dockerfile  index.ts
scripts/: assume_role.sh  dumpdata.sh  tagger
stories/: HomePages.stories.ts  Navbar.stories.ts  RatingBadge.stories.ts
tests/: auth.setup.ts  data.json
tests/component/: Brand.spec.ts  HomePages.spec.ts  Navbar.spec.ts  RatingBadge.spec.ts
tests/features/: feedback.feature  navigation.feature  panels.feature  reviews.feature
tests/functional/: a11y.spec.ts  entities.spec.ts  feedback.spec.ts  home.spec.ts  navigation.spec.ts  panels.spec.ts
tests/lib/: gene-feedback.ts  gene-review.ts  login.ts  panel-gene.ts  panel-region.ts  panel-str.ts  panel.ts  panels.ts  region-review.ts  release-panel.ts  release.ts  select2.ts  str-review.ts  test.ts  types.ts
tests/pages/: add-gene.ts  create-panel.ts  panel-form.ts  panels.ts  release-create.ts  release-detail.ts  release-list.ts  review-feedback.ts
tests/setup/: auth.setup.ts
tests/steps/: index.ts  navigate.ts  review.ts
tests/visual/: panels.spec.ts  visual.spec.ts
(+198 files in other folders)
